--- a/css/styles.css
+++ b/css/styles.css
@@ -25,15 +25,72 @@ h1 {
 }
 
 #wordGuessHud {
-    /* position: absolute; */
-    /* color: white; */
-    
+    position: absolute;
+    display: inline-block;
+    margin-top: 50%;
+    margin-left: 50%; 
+    z-index: 100;
+    color: white;
+
 }
 
 #controls {
-    /* position: absolute; */
+    position: absolute;
+    width: 50%;
+    text-align: center;
+    margin-top: 340px;
+    margin-left: 105px;
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 28px;
+    text-align: center;
 }
 
-#eject {
-    /* position: absolute; */
+.control-button {
+    outline: none;
+    color: #fff;
+    background-color: rgb(156, 205, 235);
+    /* border: none; */
+    border-radius: 5px;
+    box-shadow: 0 4px rgb(90, 119, 137); 
 }
+
+.control-button:active {
+    background-color: #2be831;
+    box-shadow: 0 5px #167819;
+    transform: translateY(2px);
+}
+
+.control-button:disabled {
+    opacity: 75%;
+    background-color: red;
+}
+
+
+
+
+#eject {
+    position: absolute;
+    display: inline-block;
+    margin: 430px 0 0 16px;
+    font-size: 15px;
+    padding: 15px 25px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: red;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px darkred;
+}
+
+#eject:active {
+    background-color: darkred;
+    box-shadow: 0 5px darkslategrey;
+    transform: translateY(4px);
+}
+
+
+
