--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,25 @@
 body {
+    background-color: black;
+}
+
+.container {
     background-image: url(../img/haz.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; 
+    background: repeating-linear-gradient(
+        45deg,
+        yellow 0px,
+        yellow 60px,
+        black 60px,
+        black 120px
+    );
+    height: 700px;
 }
 
 h1 {
     text-align: center;
     color: rgb(181, 4, 4);
-    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
